# pyopenfec

./: .gitignore  README.md  pyproject.toml  requirements.txt
pyopenfec/: aggregates.py  candidate.py  report.py  utils.py
tests/: test_committee.py  test_pyopenfec.py
