[tool.poetry]
name = "pyopenfec"
version = "0.2.7"
description = "OpenFEC API Client"

license = "MIT"
readme = "README.md"

homepage = "https://github.com/NationalJournal/pyopenfec"
keywords = [
  "fec",
  "campaign",
  "finance",
  "openfec",
]
repository = "https://github.com/NationalJournal/pyopenfec"

authors = [
  "Jeremy Bowers <jeremyjbowers@gmail.com>",
  "Bob Lannon",
  "Kevin Schaul",
  "Janak Mayer",
  "Evan Sonderegger <evan@rpy.xyz>",
  "Robert Townley <me@roberttownley.com>",
  "Hasan Tuncay <htuncay@nationaljournal.com>"
]

maintainers = [
  "Hasan Tuncay <htuncay@nationaljournal.com>",
]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.22"
pytz = "^2024.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
nose = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
